add first version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/multiplication
+spring.datasource.username=root
+spring.datasource.password=Numberone.1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
 
+
+amqp.exchange.attempts=attempts.topic
+
+logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
+
+# spring.jackson.serialization.fail-on-empty-beans=false
+
+management.endpoints.web.exposure.include=health
+
+
+spring.application.name=multiplication
